--- a/styles/projects.css
+++ b/styles/projects.css
@@ -85,18 +85,19 @@
 @media screen and (max-width:769px) {
   .bottom {
     background-image: none;
+    width: 100vw;
   }
   
   .project_container {
     width: 80vw;
-    margin-left: 7vw;
+    margin-left: 1vw;
     background-image: none;
     box-shadow: none;
   }
 
   .project_container h2 {
     font-size: calc(30px + 1vw);
-    margin: 15vh 0 5vh 0;
+    margin: 15vh 0 5vh 5vw;
   }
 
   .project_cell_wrapper {
@@ -109,23 +110,20 @@
   .project_cell_1, .project_cell_2, .project_cell_3, .project_cell_4 {
     width: 80vw;
     height: calc(40vh + 20vw);
-    margin-left: -3vw;
-    text-align: start;
-    background-position: 90%;
-    background-size: 30vw;
-    background-repeat: no-repeat;
+    background-image: none;
     border:4px dashed #f15a24;
   }
 
   .active_display {
     visibility: visible;
-    font-size: 16px;
-    width: 40vw;
+    font-size: 4vw;
+    width: 80vw;
     height: calc(40vh + 20vw);
+    padding-left: 5px;
   }
 
   .active_display h3 {
-    font-size: 20px;
+    font-size: 5vw;
   }
 }
 
